2008-01-10 Sancho Lerena <slerena@gmail.com>

        * functions_db.php: Some changes in future generic SQL interface access.

        * pandora_console/include/functions.php: Added generic acces to HTTP 
        parameters.

        * status_monitor.php: Fixed problems detected by Pierre Gaxatte.

        * estado_agente.php: Fixed the same kind of problems (ACL / Group acces)
        and added a Agent search field as request by J.Corona.

        * tactical.php: Rename of generic SQL function access.
        
        * view_server.php: Rename of generic SQL function access.

        * modificar_agente.php: Fixed some render problems, added a Agent search
        option and better formatting.

2008-01-10 Sancho Lerena <slerena@gmail.com>

	* functions_db.php: Added generic SQL access function to get data using
	a free SQL sentence.
	
	* estado_ultimopaquete.php: Uses new Keepalive implementation and render 
	keepalive data in correct way.
	
	* view_server.php,
	tactical.php: Uses new keepalive module to make correct calculations for
	server load graphs and stats.
	
	* configurar_agente.php: Insert new keepalive module record in state table
	
	* pandoradb_data.sql: Updated scheme for 1.3.1
	
	* pandoradbdata_1.3_to_1.3.1.sql: Update SQL from 1.3 to 1.3.1
	
	* index.php: Version number update.

	This is the first commit for 1.3.1 branch (Console code)

2008-01-09  Sancho Lerena  <slerena@gmail.com>

	* fgraph.php: Solved problem in combined area render (ugly graphs most of times).
	Now graphs are stacked by default (in the future could be choose between in 
	stacked mode or plain (old one), as suggested in feature request #1835681.

2008-01-08  Sancho Lerena  <slerena@gmail.com>

        * pandoradb_data.sql: Added keep_alive as module id 100 for the new keepalive
        management. Old way (from 1.2) is now deprecated and not used.

        * operation/agentes/estado_agente.php: Style changes, not code.
