@@ -1,36 +1,20 @@
 <?php
 // Pandora FMS - the Free monitoring system
 // ========================================
-// Copyright (c) 2004-2007 Sancho Lerena, slerena@gmail.com
+// Copyright (c) 2004-2008 Sancho Lerena, slerena@gmail.com
 // Main PHP/SQL code development, project architecture and management.
-// Copyright (c) 2004-2007 Raul Mateos Martin, raulofpandora@gmail.com
-// CSS and some PHP code additions
-// Copyright (c) 2006 Jose Navarro <jnavarro@jnavarro.net>
-// Additions to code for Pandora FMS 1.2 graph code
-//
 // This program is free software; you can redistribute it and/or
 // modify it under the terms of the GNU General Public License
 // as published by the Free Software Foundation for version 2.
-// This program is distributed in the hope that it will be useful,
-// but WITHOUT ANY WARRANTY; without even the implied warranty of
-// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-// GNU General Public License for more details.
-// You should have received a copy of the GNU General Public License
-// along with this program; if not, write to the Free Software
-// Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
-
-// Pandora FMS 1.x uses icons from famfamfam, licensed under CC Atr. 2.5
-// Silk icon set 1.3 (cc) Mark James, http://www.famfamfam.com/lab/icons/silk/
-// Pandora FMS 1.x uses Pear Image::Graph code
 
 //Pandora Version
 if (!isset($build_version))
-	$build_version="PC071216";
+	$build_version="PC080111";
 if (!isset($pandora_version))
-	$pandora_version="v1.4 Beta 1";
+	$pandora_version="v1.3.1-dev";
 	
 // Database configuration (default ones)
-//$dbname="pandora13";		// MySQL DataBase
+//$dbname="pandora";		// MySQL DataBase
 //$dbuser="pandora";		// DB User 
 //$dbpassword="pandora";	// Password
 //$dbhost="localhost";		// MySQL Host
